[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/worlds/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/logo.png" type="Texture" id=2]
[ext_resource path="res://src/buttons/newGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/buttons/QuitGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/coolvetica condensed rg.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/tile.png" type="Texture" id=6]
[ext_resource path="res://assets/character.png" type="Texture" id=7]
[ext_resource path="res://src/texts/Rules.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/worlds/platforms.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/animations/fade_in.tscn" type="PackedScene" id=10]

[sub_resource type="GDScript" id=1]

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="TileSet" id=3]
0/name = "tile.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1180.0
margin_bottom = 300.0
texture = ExtResource( 2 )

[node name="menubox" type="HBoxContainer" parent="Menu"]
margin_top = 304.0
margin_right = 640.0
margin_bottom = 458.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="buttons" type="VBoxContainer" parent="Menu/menubox"]
margin_right = 640.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="newGameButton" parent="Menu/menubox/buttons" instance=ExtResource( 3 )]
margin_right = 640.0
margin_bottom = 75.0
script = SubResource( 1 )

[node name="QuitGameButton" parent="Menu/menubox/buttons" instance=ExtResource( 4 )]
margin_top = 79.0
margin_bottom = 154.0
script = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/menubox"]
visible = false
margin_left = 644.0
margin_right = 644.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="footer" type="Label" parent="Menu"]
margin_top = 464.0
margin_right = 1180.0
margin_bottom = 620.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Copyright Â© Adriaen Andry"
align = 1
valign = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -131044, 0, 0, -131043, 0, 0, -131042, 0, 0, -131041, 0, 0, -131040, 0, 0, -131039, 0, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131034, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 0, 0, 1310748, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310755, 0, 0, 1310756, 0, 0, 1310757, 0, 0, 1310758, 0, 0 )

[node name="character" type="TextureRect" parent="."]
margin_left = 790.0
margin_top = 310.0
margin_right = 1004.0
margin_bottom = 524.0
texture = ExtResource( 7 )

[node name="Rules" parent="." instance=ExtResource( 8 )]
margin_left = 600.0
margin_top = 90.0
margin_right = 600.0
margin_bottom = 90.0

[node name="platforms" parent="." instance=ExtResource( 9 )]
tile_data = PoolIntArray( -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -196580, 0, 0, -196579, 0, 0, -196578, 0, 0, -196577, 0, 0, -196576, 0, 0, -196575, 0, 0, -196574, 0, 0, -196573, 0, 0, -196572, 0, 0, -196571, 0, 0, -196570, 0, 0, -196569, 0, 0, 1048601, 0, 0, 1048602, 1, 0, 1048603, 2, 0, 1048604, 3, 0, 1048605, 4, 0, 1048606, 5, 0 )

[node name="fade_in" parent="." instance=ExtResource( 10 )]
visible = false
[connection signal="pressed" from="Menu/menubox/buttons/newGameButton" to="." method="_on_newGameButton_pressed"]
[connection signal="pressed" from="Menu/menubox/buttons/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
[connection signal="fade_finished" from="fade_in" to="." method="_on_fade_in_fade_finished"]
